# FaceTracking

./: .gitignore  README.md
deploy/: CMakeLists.txt  main.cpp
deploy/include/: detector.h  face_detector.h  tracker.h
deploy/src/: detector.cpp  face_detector.cpp  tracker.cpp
doc/: 课程报告.md  附录.md
train/: cuda_test.py  eval.py  export.py  pyproject.toml  train.ipynb
