[project]
name = "train"
version = "0.1.0"
description = "Face Tracking Project"
requires-python = ">=3.12"
dependencies = [
    "pandas>=2.3.3",
    "torch>=2.4.0",
    "torchvision>=0.19.0",
    "ultralytics>=8.3.0",
]

[[tool.uv.index]]
name = "pytorch-cu126"
url = "https://download.pytorch.org/whl/cu126"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cu126" }
torchvision = { index = "pytorch-cu126" }
